libs/extractor/tests/snapshots/snapshots/extractor__tests__global_css_fontfaces_multi_value_optimization.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { globalCss } from '@devup-ui/core'\nglobalCss({\n    fontFaces: [\n        {\n            fontFamily: \"'Custom Font', 'Fallback Font', sans-serif\",\n            src: \"local('Custom Font'), url('/fonts/custom.woff2') format('woff2')\",\n            fontWeight: \"400 700\",\n            fontStyle: \"normal\"\n        }\n    ]\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        FontFace(
            ExtractFontFace {
                file: "test.tsx",
                properties: {
                    "font-family": "\"Custom Font\",\"Fallback Font\",sans-serif",
                    "font-style": "normal",
                    "font-weight": "400 700",
                    "src": "local('Custom Font'),url('/fonts/custom.woff2') format('woff2')",
                },
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n;\n",
}
