libs/extractor/tests/snapshots/snapshots/extractor__tests__global_css_fontfaces_object_syntax-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { globalCss } from '@devup-ui/core'\nglobalCss({\n    fontFaces: [\n        {\n            fontFamily: \"MultiFont\",\n            src: \"url('/fonts/multi.woff2')\",\n            fontWeight: \"bold\",\n            fontDisplay: \"swap\"\n        },\n        {\n            fontFamily: \"AnotherFont\",\n            src: \"local('Arial')\"\n        }\n    ]\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        FontFace(
            ExtractFontFace {
                file: "test.tsx",
                properties: {
                    "font-display": "swap",
                    "font-family": "MultiFont",
                    "font-weight": "bold",
                    "src": "url('/fonts/multi.woff2')",
                },
            },
        ),
        FontFace(
            ExtractFontFace {
                file: "test.tsx",
                properties: {
                    "font-family": "AnotherFont",
                    "src": "local('Arial')",
                },
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n;\n",
}
