libs/extractor/tests/snapshots/snapshots/extractor__tests__global_css_with_font_faces.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {globalCss} from '@devup-ui/core'\nglobalCss({\n    fontFaces: [\n        {\n            fontFamily: \"CustomFont\",\n            src: \"url('/fonts/custom.woff2')\",\n            fontWeight: \"400\"\n        }\n    ]\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        FontFace(
            ExtractFontFace {
                file: "test.tsx",
                properties: {
                    "font-family": "CustomFont",
                    "font-weight": "400",
                    "src": "url('/fonts/custom.woff2')",
                },
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\n;\n",
}
